--- a/skill_swap_platform/app/templates/login.html
+++ b/skill_swap_platform/app/templates/login.html
@@ -1,10 +1,16 @@
 {% extends "layout.html" %}
 {% block content %}
-<h2>Login</h2>
+<h2 class="mb-4">Login</h2>
 <form method="POST">
     {{ form.hidden_tag() }}
-    {{ form.email.label }} {{ form.email() }}<br>
-    {{ form.password.label }} {{ form.password() }}<br>
-    {{ form.submit() }}
+    <div class="mb-3">
+        {{ form.email.label(class="form-label") }}
+        {{ form.email(class="form-control") }}
+    </div>
+    <div class="mb-3">
+        {{ form.password.label(class="form-label") }}
+        {{ form.password(class="form-control") }}
+    </div>
+    {{ form.submit(class="btn btn-primary") }}
 </form>
 {% endblock %}
