--- a/skill_swap_platform/app/templates/register.html
+++ b/skill_swap_platform/app/templates/register.html
@@ -1,14 +1,32 @@
 {% extends "layout.html" %}
 {% block content %}
-<h2>Register</h2>
+<h2 class="mb-4">Register</h2>
 <form method="POST">
     {{ form.hidden_tag() }}
-    {{ form.name.label }} {{ form.name() }}<br>
-    {{ form.email.label }} {{ form.email() }}<br>
-    {{ form.password.label }} {{ form.password() }}<br>
-    {{ form.location.label }} {{ form.location() }}<br>
-    {{ form.availability.label }} {{ form.availability() }}<br>
-    {{ form.is_public.label }} {{ form.is_public() }}<br>
-    {{ form.submit() }}
+    <div class="mb-3">
+        {{ form.name.label(class="form-label") }}
+        {{ form.name(class="form-control") }}
+    </div>
+    <div class="mb-3">
+        {{ form.email.label(class="form-label") }}
+        {{ form.email(class="form-control") }}
+    </div>
+    <div class="mb-3">
+        {{ form.password.label(class="form-label") }}
+        {{ form.password(class="form-control") }}
+    </div>
+    <div class="mb-3">
+        {{ form.location.label(class="form-label") }}
+        {{ form.location(class="form-control") }}
+    </div>
+    <div class="mb-3">
+        {{ form.availability.label(class="form-label") }}
+        {{ form.availability(class="form-select") }}
+    </div>
+    <div class="form-check mb-3">
+        {{ form.is_public(class="form-check-input") }}
+        {{ form.is_public.label(class="form-check-label") }}
+    </div>
+    {{ form.submit(class="btn btn-success") }}
 </form>
 {% endblock %}
