--- a/skill_swap_platform/app/templates/layout.html
+++ b/skill_swap_platform/app/templates/layout.html
@@ -7,13 +7,18 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-4">
-        <a class="navbar-brand" href="#">Skill Swap</a>
-        <div class="collapse navbar-collapse">
+        <a class="navbar-brand" href="{{ url_for('main.public_profiles') }}">Skill Swap</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 {% if current_user.is_authenticated %}
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('main.public_profiles') }}">Browse</a></li>
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('main.dashboard') }}">Dashboard</a></li>
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('main.logout') }}">Logout</a></li>
                 {% else %}
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('main.public_profiles') }}">Browse</a></li>
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('main.login') }}">Login</a></li>
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('main.register') }}">Register</a></li>
                 {% endif %}
