--- a/skill_swap_platform/app/templates/login.html
+++ b/skill_swap_platform/app/templates/login.html
@@ -28,7 +28,7 @@
         </form>
 
         <div class="text-center mt-3">
-            <a href="{{ url_for('auth.register') }}">Don't have an account? Register</a>
+            <a href="{{ url_for('main.register') }}">Don't have an account? Register</a>
         </div>
     </div>
 </div>
